# crewAI

./: .gitignore  .pre-commit-config.yaml  =0.28.0  =2.0  =3.8.0  CHANGES.md  CHANGES_2025-06-05.md  COMPLEX_AGENT_WORKFLOWS_GUIDE.md  Dockerfile  Dockerfile.dev  LIBRECHAT_INTEGRATION_GUIDE.md  MCP_DOCUMENTATION_INDEX.md  MCP_MIGRATION_COMPLETE.md  MCP_PHASE3_COMPLETE.md  MCP_PHASE4_COMPLETE.md  MCP_PHASE5_COMPLETE.md  MCP_SETUP_COMPLETE.md  Makefile  PACKAGE_STRUCTURE.md  PHASE4_COMPLETION_SUMMARY.md  README.md  TERMINAL_TESTING_GUIDE.md  TEST_SUITE_GUIDE.md  TODO.md  TOOLS.md  __init__.py  benchmark.sh  browse_resources.sh  librechat.yaml  manifest.json  pyproject.toml  quick_tool_test.sh  requirements.txt  run_fastapi_integration_test.sh  run_test_assistant_demo.sh  start_mcp_server.py  terminal_test_suite.sh  test_package_refactor.py  test_prompts.py  test_resource_access.py  (+2 more)
.claude/: settings.local.json
_old/: advanced_memex_scanner.py  comprehensive_memex_to_myndy_replacement.py  conversation_pipeline.py  convert_md_memex_to_myndy.py  crewai_entity_agents.py  demo_feedback_analytics.py  entity_extraction_tools.py  final_test.py  pipeline.py  pipeline_server.py  populate_all_tools.py  populate_registry.py  register_conversation_tools.py  register_monitoring_tools.py  rename_myndy_to_myndy.py  simple_ollama_test.py  simple_test.py  test_agent_tools_simple.py  test_all_agent_types.py  test_api.py  test_clean_output.py  test_crewai_advanced.py  test_crewai_basic.py  test_crewai_quick.py  test_crewai_simple.py  test_critical_issues.py  test_fastapi_assistant_demo.py  test_fastapi_client.py  test_fastapi_memory_agent.py  test_feedback_analytics.py  test_http_bridge.py  test_http_integration.py  test_integration.py  test_integration_comprehensive.py  test_litellm_fix.py  test_litellm_message_validation.py  test_memory_tools.py  test_memory_tools_direct.py  test_ollama_hardcoded_settings_fix.py  test_ollama_integration.py  (+14 more)
agents/: __init__.py  agent_manager.py  cache_manager_agent.py  context_manager.py  enhanced_personal_assistant.py  enhanced_shadow_agent.py  fastapi_conversation_agent.py  fastapi_memory_agent.py  fastapi_memory_librarian.py  fastapi_status_agent.py  fastapi_test_assistant.py  fastapi_time_agent.py  fastapi_time_agent_fixed.py  fastapi_weather_agent.py  fastapi_weather_agent_fixed.py  mvp_shadow_agent.py  performance_monitor_agent.py  personal_assistant.py  simple_agents.py
api/: README.md  __init__.py  agent_router.py  enhanced_server.py  main.py  models.py  open_webui_config.json  requirements.txt  server.py  valve_manager.py
config/: __init__.py  env_config.py  llm_config.py  runtime_config.py
core/: shared_resource_manager.py
crews/: __init__.py
docs/: ENHANCED_AGENTS_SUMMARY.md  FASTAPI_AGENTS_IMPLEMENTATION.md  (+8 more)
(+162 files in other folders)
