[project]
name = "myndy-crewai"
version = "0.1.0"
description = "Myndy-Core CrewAI Integration: Specialized agents with intelligent routing, memory integration, and 530+ tool access via HTTP bridge to myndy-ai backend"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Jeremy", email = "jeremy@myndy.ai" }
]
dependencies = [
    # Core Dependencies
    "pydantic>=2.4.2",
    "openai>=1.13.3",
    "litellm==1.68.0",
    "instructor>=1.3.3",
    # Text Processing
    "pdfplumber>=0.11.4",
    "regex>=2024.9.11",
    # Telemetry and Monitoring
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    # Data Handling
    "chromadb>=0.5.23",
    "openpyxl>=3.1.5",
    "pyvis>=0.3.2",
    # Authentication and Security
    "auth0-python>=4.7.1",
    "python-dotenv>=1.0.0",
    # Configuration and Utils
    "click>=8.1.7",
    "appdirs>=1.4.4",
    "jsonref>=1.1.0",
    "json-repair>=0.25.2",
    "uv>=0.4.25",
    "tomli-w>=1.1.0",
    "tomli>=2.0.2",
    "blinker>=1.9.0",
    "json5>=0.10.0",
    "sentence-transformers>=4.1.0",
    "qdrant-client>=1.12.0",
    "fastapi>=0.115.3",
    "langchain-community>=0.3.3",
    "langchain>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/outdoorsea/myndy-core"
Documentation = "https://github.com/outdoorsea/myndy-core/tree/main/crewAI/docs"
Repository = "https://github.com/outdoorsea/myndy-core"

[project.optional-dependencies]
tools = ["crewai-tools~=0.45.0"]
embeddings = [
    "tiktoken~=0.7.0"
]
agentops = ["agentops>=0.3.0"]
fastembed = ["fastembed>=0.4.1"]
pdfplumber = [
    "pdfplumber>=0.11.4",
]
pandas = [
    "pandas>=2.2.3",
]
openpyxl = [
    "openpyxl>=3.1.5",
]
mem0 = ["mem0ai>=0.1.94"]
docling = [
    "docling>=2.12.0",
]
aisuite = [
    "aisuite>=0.1.10",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.2",
    "mypy>=1.10.0",
    "pre-commit>=3.6.0",
    "mkdocs>=1.4.3",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.1.2",
    "mkdocs-material>=9.5.7",
    "mkdocs-material-extensions>=1.3.1",
    "pillow>=10.2.0",
    "cairosvg>=2.7.1",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "pytest-asyncio>=0.23.7",
    "pytest-subprocess>=1.5.2",
    "pytest-recording>=0.13.2",
    "pytest-randomly>=3.16.0",
    "pytest-timeout>=2.3.1",
]

[project.scripts]
myndy-crewai = "myndy_crewai.pipeline.server:main"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = 'import-untyped'
exclude = ["cli/templates"]

[tool.bandit]
exclude_dirs = ["src/crewai/cli/templates", "src/myndy_crewai/cli/templates"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
